--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "json-loader": "^0.5.4",
+    "node-dir": "^0.1.16",
     "sha1": "^1.1.1",
     "xml2js": "^0.4.17"
   }
