--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "babel-polyfill": "^6.20.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "hash-files": "^1.1.1",
     "json-loader": "^0.5.4",
     "node-dir": "^0.1.16",
     "sha1": "^1.1.1",
+    "sha1-file": "^1.0.0",
     "xml2js": "^0.4.17"
   }
 }
