--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "name": "Launch Program",
             "program": "${workspaceRoot}/app.js",
             "cwd": "${workspaceRoot}"
+            // "console": "externalTerminal"
         },
         {
             "type": "node",
