--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}/app.js",
-            "cwd": "${workspaceRoot}"
-            // "console": "externalTerminal"
+            "cwd": "${workspaceRoot}",
+            "console": "externalTerminal"
         },
         {
             "type": "node",
