--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jpeg-js": "^0.2.0",
     "json-loader": "^0.5.4",
     "node-dir": "^0.1.16",
+    "readline-sync": "^1.4.5",
     "xml2js": "^0.4.17"
   }
 }
